--- a/src/Colors.scss
+++ b/src/Colors.scss
@@ -1,6 +1,8 @@
 $primary-background: #1E1E1E;
 $secondary-background: #565656;
 
+$navbar-color: #222222;
+
 $text-color: #FAF7ED;
 
 $accent: #B3C8C3;
