--- a/src/Pages/MainPage/index.scss
+++ b/src/Pages/MainPage/index.scss
@@ -9,7 +9,8 @@ body{
     display: flex;
     width: 100%;
     min-height: 100vh;
-    background: linear-gradient($primary-background, $secondary-background); 
+    background: linear-gradient(0deg, #262423 0%, rgba(255, 255, 255, 0.00) 50%);
+    box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.25);
 }
 
 #root{
@@ -17,4 +18,89 @@ body{
     flex-direction: column;
     width: 100%;
     min-height: 100vh;
+}
+
+.background{
+    height: 85%;
+    width: 100%;
+    background-image: url("https://scontent.frix3-1.fna.fbcdn.net/v/t39.30808-6/387872066_122114438906064995_4260919319721116277_n.jpg?_nc_cat=111&ccb=1-7&_nc_sid=5f2048&_nc_ohc=JqH5iNI2rcEAX-_K-bs&_nc_ht=scontent.frix3-1.fna&oh=00_AfBLxuqMg1yNbVKSCU6_opdz5AC9W6mrpN4-mwJxM6oEpQ&oe=65599917");
+    background-attachment: fixed;
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: cover;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+
+    .logo{
+        width: 100%;
+        height: 70%;
+        // outline: 3px solid red;
+        display: flex;
+        justify-content: center;
+        img{
+            width: 80%;
+            height: 60%;
+            object-fit: cover;
+        }
+    }
+    .down{
+        width: 100%;
+        height: 20%;
+        // outline: 3px solid red;
+        display: flex;
+        justify-content: center;
+        align-items: flex-end;
+        .down-arrow{
+            font-family: 'Material Symbols Outlined';
+            font-weight: normal;
+            font-style: normal;
+            font-size: 70px;
+            line-height: 1;
+            color: white;
+            letter-spacing: normal;
+            text-transform: none;
+            display: inline-block;
+            white-space: nowrap;
+            word-wrap: normal;
+            direction: ltr;
+            -webkit-font-feature-settings: 'liga';
+            -webkit-font-smoothing: antialiased;
+            -webkit-user-select: none; 
+            -ms-user-select: none;
+            user-select: none;
+            cursor: pointer;
+        }
+    }
+}
+
+.vert-move {
+    -webkit-animation: mover 1s infinite  alternate;
+    animation: mover 1s infinite  alternate;
+}
+.vert-move {
+    -webkit-animation: mover 1s infinite  alternate;
+    animation: mover 1s infinite  alternate;
+}
+@-webkit-keyframes mover {
+    0% { transform: translateY(0); }
+    100% { transform: translateY(-10px); }
+}
+@keyframes mover {
+    0% { transform: translateY(0); }
+    100% { transform: translateY(-10px); }
+}
+
+.desc{
+    height: 15%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    color: #FAF7ED;
+    text-align: center;
+    font-family: Poppins;
+    font-size: 36px;
+    font-style: normal;
+    font-weight: 600;
+    line-height: normal;
 }
