--- a/src/Style/index.scss
+++ b/src/Style/index.scss
@@ -34,7 +34,7 @@ body{
     display: flex;
     flex-direction: column;
     width: 100%;
-    min-height: 200vh;
+    min-height: auto;
 }
 .background{
     display: flex;
@@ -133,7 +133,7 @@ body{
 
 .middle{
     width: 100%;
-    height: 50%;
+    height: 100vh;
     background: linear-gradient(180deg, #262423 7%, rgba(255, 255, 255, 0) 150%);
 
     button{
