--- a/src/Style/header.scss
+++ b/src/Style/header.scss
@@ -7,20 +7,20 @@ h1{
 .main_bar{
     display: flex;
     align-items: center;
+    justify-content: space-between;
     height: 8vh;
     background: $navbar-color;
+    width: 100%;
 
-    .logo{
-        width: 70%;
+
 
         img{
             height: 10vh;
             width: 15vw;
             object-fit: cover;
         }
-    }
+    
     .buttons{
-        width: 30%;
         display: flex;
         justify-content: space-evenly;
     }
@@ -28,12 +28,10 @@ h1{
         margin: 10px;
         display: flex;
         justify-content: center;
-        align-items: center;
 
         h1{
             display: flex;
             justify-content: center;
-            align-items: center;
             font-size: 22px;
             color: $text-color;
             padding: 0;
