--- a/src/Style/login.scss
+++ b/src/Style/login.scss
@@ -1,6 +1,16 @@
+@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@200;300;400;500;600;700;800;900&display=swap');
+
 *{
     padding: 0;
     margin: 0;
+    font-family: 'Poppins', sans-serif;
+}
+
+#background_image{
+    position: absolute;
+    width: 100%;
+    z-index: -2;
+    max-height: 100vh;
 }
 
 .cont{
@@ -88,14 +98,18 @@
         }
         a{
             color: rgb(0, 166, 255);
+            cursor: pointer;
         }
         input{
             width: 100%;
             height: 4vh;
-            border-radius: 12px;
+            border-radius: 8px;
             border: 1px solid var(--3-gray, #D0D4D9);
             background: var(--1-white, #FFF);
             margin-bottom: 10px;
+        }
+        label{
+            color: white;
         }
         button{
             margin-top: 10px;
@@ -105,6 +119,12 @@
             width: 50%;
             padding: 10px 0px;
             border: none;
+            cursor: pointer;
+            transition: all, ease-in-out .25s;
+        }
+
+        button:hover{
+            background: #9e3f0f;
         }
     }
 }
