--- a/src/Style/index.scss
+++ b/src/Style/index.scss
@@ -166,12 +166,15 @@ body{
     }
     .options{
         height: 45%;
+        width: 100%;
         display: flex;
         justify-content: space-evenly;
         // outline: 1px solid red;
-
+        button{
+            cursor: pointer;
+        }
         div{
-            width: 25%;
+            width: 33%;
             height: 100%;
             box-shadow: 0px 0px 15px 4px rgba(0, 0, 0, 0.25);
             background-repeat: no-repeat;
@@ -182,15 +185,19 @@ body{
             flex-direction: column;
             color: white;
             font-size: 16px;
+            margin: 16px;
         }
         .first{
             background-image: url("../img/front.jpg");
+            background-size: cover;
         }
         .second{
             background-image: url("../img/close.jpg");
+            background-size: cover;
         }
         .third{
             background-image: url("../img/back.jpg");
+            background-size: cover;
         }
     }
     .links{
