--- a/src/Style/index.scss
+++ b/src/Style/index.scss
@@ -143,6 +143,7 @@ body{
         box-shadow: 0px 0px 6px 0px rgba(0, 0, 0, 0.25);
         padding: 5px 10px;
         color: white;
+        cursor: pointer;
     }
 
     .join{
@@ -165,28 +166,30 @@ body{
         }
     }
     .options{
+        display: flex;
+        flex-wrap: wrap;
+        justify-content: center;
         height: 45%;
         width: 100%;
-        display: flex;
-        justify-content: space-evenly;
         // outline: 1px solid red;
         button{
             cursor: pointer;
         }
         div{
-            width: 33%;
-            height: 100%;
-            box-shadow: 0px 0px 15px 4px rgba(0, 0, 0, 0.25);
-            background-repeat: no-repeat;
-            background-size: 100% 100%;
             display: flex;
             justify-content: center;
             align-items: center;
             flex-direction: column;
+            width: 30%;
+            height: 100%;
+            box-shadow: 0px 0px 15px 4px rgba(0, 0, 0, 0.25);
+            background-repeat: no-repeat;
+            background-size: 100% 100%;
             color: white;
             font-size: 16px;
-            margin: 16px;
+            margin: 8px;
         }
+
         .first{
             background-image: url("../img/front.jpg");
             background-size: cover;
