--- a/src/Style/index.scss
+++ b/src/Style/index.scss
@@ -143,6 +143,7 @@ body{
         box-shadow: 0px 0px 6px 0px rgba(0, 0, 0, 0.25);
         padding: 5px 10px;
         color: white;
+        cursor: pointer;
     }
 
     .join{
